--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,7 @@
   "permissions": [
     "storage",
     "alarms",
-    "contextMenus",
-    "tabs",
-    "activeTab"
+    "tabs"
   ],
   "browser_action": {
     "default_icon": "/images/1.png",
