--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "storage",
     "alarms",
-    "tabs"
+    "tabs",
+    "notifications"
   ],
   "browser_action": {
     "default_icon": "/images/icon_16.png",
