--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Twitch Stream I Follow",
-  "version": "0.0.1",
-  "description": "Show twitch streamers on live I follow",
+  "version": "0.0.2",
+  "description": "Show twitch streams I follow",
   "permissions": [
     "storage",
     "alarms",
