--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Twitch Stream I Follow",
-  "version": "0.0.2",
-  "description": "Show twitch streams I follow",
+  "name": "Twitch Live Notification",
+  "version": "0.0.3",
+  "description": "Get notified of new twitch live broadcast you're following",
   "permissions": [
     "storage",
     "alarms",
