--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,11 @@
 {
   "description": "Version and Description should be specified in package.json",
   "version": "0.0.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Twitch Live Notification",
-  "browser_action": {
+  "action": {
     "default_icon": "/img/icon_16.png",
     "default_popup": "popup.html"
-  },
-  "options_page": "options.html",
-  "background": {
-    "scripts": [
-      "background.bundle.js"
-    ],
-    "persistent": false
   },
   "icons": {
     "16": "/img/icon_16.png",
@@ -20,10 +13,14 @@
     "48": "/img/icon_48.png",
     "128": "/img/icon_128.png"
   },
-  "web_accessible_resources": [
-    "img/*.png",
-    "options.html"
-  ],
+  "background": {
+    "service_worker": "background.bundle.js",
+    "type": "module"
+  },
+  "options_ui": {
+    "open_in_tab": false,
+    "page": "options.html"
+  },
   "permissions": [
     "storage",
     "alarms",
@@ -31,5 +28,10 @@
     "notifications",
     "identity"
   ],
-  "content_security_policy": "script-src 'self' https://apis.google.com https://www.gstatic.com https://www.googleapis.com https://securetoken.googleapis.com; object-src 'self'"
+  "host_permissions": [
+    "https://*.twitch.tv/"
+  ],
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; style-src 'self' 'unsafe-inline'; connect-src https://*.twitch.tv http://localhost:* ws://localhost:*;"
+  }
 }
