--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,7 +18,7 @@
     "type": "module"
   },
   "options_ui": {
-    "open_in_tab": false,
+    "open_in_tab": true,
     "page": "options.html"
   },
   "permissions": [
